	  boardctl() support that will permit applications to control USB devices
	  (2016-03-25).
	* configs/stm32l476vg-disco: Add support for the STM32L476VG Discovery
	  board.  From Dave (2016-03-25).

7.16 2016-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* PM: Add activity domain to all PM interfaces and driver callbacks.  If
	  CONFIG_PM_NDOMAINS == 1, then the legacy behavior is preserved.  If
	  CONFIG_PM_NDOMAINS > 1, then multiple PM domains are supported.  This
	  will allow separate control for certain power management groups.  For
	  example, a network can be shut down without affect an ongoing UI (and
	  vice versa) (2016-03-27).
	* apps/configs/vsn:  Removed the VSN configuration from the main NuttX
	  repository.  The VSN can still be found in the Obsoleted repository
	  (along with a full explanation in the README file there) (2016-03-29).
	* arch/arm/src/armv7-m and stm32:  Add support for the IAR toolchain for
	  the limited case of the ARMv7-M architecture and the STM32 chip.  From
	  Aleksandr Vyhovanec (2016-04-02).
	* arch/arm/src/stm32/stm32f40xxx_rtc.c:  Add a custom RTC driver.  From
	  Neil Hancock (2016-04-02).
	* include/nuttx/timer/rtc.h and drivers/timers/rtc.c:  Simplify the RTC
	  interface.  The old interface was way to complex and was not fully
	  implemented anywhere (2016-04-02).
	* Moved NuttX repository to https://bitbucket.org/nuttx/nuttx (2016-04-06).
	* arch/arm/src/armv7-m/iar:  Convert more assembly language files for
	  use with the IAR toolchain.  From Kha Vo (2016-04-08)
	* Fix miscellaneous build issues for the IAR compiler.  From Kha Vo
	  (2016-04-08).
	* tools/ide_exporter.py:  IDE exported Python script for use with the
	  IAR toolchain.  From Kha Vo (2016-04-08).
	* STM3220G-EVAL:  Add support for both the IAR and uVision GCC IDEs
	  From Kha Vo (2016-04-08).
	* STM32F429I Discovery:  Add support for the uVision GCC IDE.   From
	  Kha Vo (2016-04-08).
