@@ -39,7 +39,7 @@ ifneq ($(CONFIG_DISABLE_SIGNALS),y)
 
 CSRCS += sig_emptyset.c sig_fillset.c sig_addset.c sig_delset.c
 CSRCS += sig_ismember.c sig_hold.c sig_relse.c sig_ignore.c sig_pause.c
-CSRCS += sig_set.c
+CSRCS += signal.c
 
 # Add the signal directory to the build
 
